k8s/istio/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservices-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: /orders
      route:
        - destination:
            host: order-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: /payments
      route:
        - destination:
            host: payment-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: /deliveries
      route:
        - destination:
            host: delivery-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: /products
      route:
        - destination:
            host: product-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: /warehouse
      route:
        - destination:
            host: warehouse-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ui-service
            port:
              number: 8080
